# AFinity

./: gradle.properties
.github/workflows/: android-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/makd/afinity/player/exoplayer/: AfinityRenderersFactoryTest.kt
app/src/main/cpp/: CMakeLists.txt  dovi_bridge.cpp
app/src/main/cpp/libdovi/android-armeabi-v7a/include/libdovi/: rpu_parser.h
app/src/main/java/com/makd/afinity/data/models/player/: SegmentAutoSkipMode.kt  VideoMetadata.kt
app/src/main/java/com/makd/afinity/data/repository/: PreferencesRepository.kt
app/src/main/java/com/makd/afinity/data/repository/impl/: PreferencesRepositoryImpl.kt
app/src/main/java/com/makd/afinity/player/exoplayer/: AfinityRenderersFactory.kt  DecoderPriority.kt
app/src/main/java/com/makd/afinity/player/exoplayer/dovi/: DolbyVisionExtractorsFactory.kt  DolbyVisionMatroskaTransformer.kt  DoviBridge.kt  HevcDvRpuStripper.kt  HevcHdr10PlusStripper.kt
app/src/main/java/com/makd/afinity/player/exoplayer/dovi/dvmkv/: ChunkIndexProvider.java  DefaultEbmlReader.java  DolbyVisionCompatibility.java  EbmlProcessor.java  EbmlReader.java  MatroskaExtractor.java  Sniffer.java  ThumbnailMetadata.java  TrackAwareSeekMap.java  VarintReader.java  package-info.java
app/src/main/java/com/makd/afinity/ui/player/: PlayerScreen.kt  PlayerViewModel.kt
app/src/main/java/com/makd/afinity/ui/player/components/: PlaybackInfoOverlay.kt
app/src/main/java/com/makd/afinity/ui/settings/: SettingsViewModel.kt
app/src/main/java/com/makd/afinity/ui/settings/player/: PlayerOptionsScreen.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/makd/afinity/player/exoplayer/: DecoderPriorityTest.kt
gradle/: libs.versions.toml
tools/build-decoders/: .gitignore  Dockerfile  README.md  build-all.sh  build-dav1d.sh  build-ffmpeg.sh  repack-nextlib.sh
tools/build-decoders/patches/: README.md
