cmake_minimum_required(VERSION 3.22.1)
project(dovi_bridge LANGUAGES C CXX)

# Adapted from NuvioMedia/NuvioTV (GPLv3). Builds the JNI bridge in two modes:
#   DOVI_ENABLE_LIBDOVI=ON  -> link the prebuilt libdovi.a for the current ABI (real conversion)
#   DOVI_ENABLE_LIBDOVI=OFF -> stub build, conversion returns null (keeps the app building)
option(DOVI_ENABLE_LIBDOVI "Link against the prebuilt libdovi static library" ON)
set(DOVI_LIBDOVI_PREBUILT_ROOT "" CACHE PATH "Root containing android-<abi>/{lib,include} for libdovi")

add_library(dovi_bridge SHARED dovi_bridge.cpp)

# 16 KB ELF alignment, required on Android 15+ (AFinity minSdk 35).
target_link_options(dovi_bridge PRIVATE "-Wl,-z,max-page-size=16384")

find_library(log-lib log)
target_compile_features(dovi_bridge PRIVATE cxx_std_17)
target_compile_options(dovi_bridge PRIVATE -Wall -Wextra -Wno-unused-parameter)

set(_dovi_resolved_static_lib "")
set(_dovi_resolved_include_dir "")

if (DOVI_ENABLE_LIBDOVI)
    set(_dovi_prebuilt_root "${DOVI_LIBDOVI_PREBUILT_ROOT}")
    if (NOT _dovi_prebuilt_root)
        set(_dovi_prebuilt_root "${CMAKE_CURRENT_LIST_DIR}/libdovi")
    endif()

    set(_dovi_abi_dir "")
    if (ANDROID_ABI STREQUAL "arm64-v8a")
        set(_dovi_abi_dir "android-arm64")
    elseif (ANDROID_ABI STREQUAL "armeabi-v7a")
        set(_dovi_abi_dir "android-armeabi-v7a")
    elseif (ANDROID_ABI STREQUAL "x86")
        set(_dovi_abi_dir "android-x86")
    elseif (ANDROID_ABI STREQUAL "x86_64")
        set(_dovi_abi_dir "android-x86_64")
    endif()

    if (_dovi_abi_dir)
        set(_candidate_lib "${_dovi_prebuilt_root}/${_dovi_abi_dir}/lib/libdovi.a")
        set(_candidate_inc "${_dovi_prebuilt_root}/${_dovi_abi_dir}/include")
        if (EXISTS "${_candidate_lib}")
            set(_dovi_resolved_static_lib "${_candidate_lib}")
            if (EXISTS "${_candidate_inc}")
                set(_dovi_resolved_include_dir "${_candidate_inc}")
            endif()
        endif()
    endif()
endif()

if (DOVI_ENABLE_LIBDOVI AND EXISTS "${_dovi_resolved_static_lib}")
    add_library(dovi_static STATIC IMPORTED)
    set_target_properties(dovi_static PROPERTIES IMPORTED_LOCATION "${_dovi_resolved_static_lib}")
    if (EXISTS "${_dovi_resolved_include_dir}")
        target_include_directories(dovi_bridge PRIVATE "${_dovi_resolved_include_dir}")
    endif()
    target_compile_definitions(dovi_bridge PRIVATE DOVI_REAL_LINKED=1)
    message(STATUS "libdovi enabled for ABI=${ANDROID_ABI} lib=${_dovi_resolved_static_lib}")
    target_link_libraries(dovi_bridge dovi_static ${log-lib})
else()
    target_compile_definitions(dovi_bridge PRIVATE DOVI_REAL_LINKED=0)
    if (DOVI_ENABLE_LIBDOVI)
        message(WARNING "libdovi requested but no static library resolved for ABI=${ANDROID_ABI}. Using stub mode.")
    endif()
    target_link_libraries(dovi_bridge ${log-lib})
endif()
